src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>PublicGeneralLiabilityAmt__c</fullName>
        <inlineHelpText>Enter the total value of Public/General Liability nominated in the contract</inlineHelpText>
        <label>Public/General Liability Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevenueLimitFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Limit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewStatus__c</fullName>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScopeOfServices__c</fullName>
        <description>Provide a detailed description of the scope of services available under the agreement.</description>
        <inlineHelpText>Provide a detailed description of the scope of services available under the agreement.</inlineHelpText>
        <label>Scope of Services</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScopePackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the scope package to which this contract applies (if a scope package has already been entered)</description>
        <inlineHelpText>Search and select the scope package to which this contract applies (if a scope package has already been entered)</inlineHelpText>
        <label>Scope Package</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Packages__c.Scope__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Packages__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SectionHeaderSubtitle__c</fullName>
        <formula>RecordType.Name &amp; &quot;-&quot; &amp; AgreementNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Header Subtitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegApprovalStatus__c</fullName>
        <label>Segmentation Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecialConditions__c</fullName>
        <label>Special Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Enter the date the contract is effective from (or the date of execution)</description>
        <inlineHelpText>Enter the date the contract is effective from (or the date of execution)</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TERMID__c</fullName>
        <formula>CASE((PaymentTerms__c),
&quot;120 DAYS&quot;, &quot;1021&quot;,
&quot;14 DAYS&quot;, &quot;1002&quot;,
&quot;15 DAYS&quot;, &quot;2040&quot;, 
&quot;20th Next Month&quot;, &quot;1005&quot;, 
&quot;30 DAYS&quot;, &quot;1003&quot;, 
&quot;30 NET&quot;, &quot;4&quot;,
&quot;35 DAYS&quot;, &quot;2041&quot;,
&quot;38 DAYS&quot;, &quot;2042&quot;,
&quot;40 DAYS&quot;, &quot;2043&quot;,
&quot;45 DAYS&quot;, &quot;1040&quot;,
&quot;60 DAYS&quot;, &quot;1004&quot;,
&quot;7 DAYS&quot;, &quot;1001&quot;,
&quot;75 DAYS&quot;, &quot;2044&quot;,
&quot;80 DAYS&quot;, &quot;2045&quot;,
&quot;90 DAYS&quot;, &quot;1020&quot;,
&quot;IMMEDIATE&quot;, &quot;5&quot;,
&quot;Pay on Receipt&quot;, &quot;1000&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamLeaderName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the Team Leader for the Intercompany Subconsultant</description>
        <inlineHelpText>Search and select the Team Leader for the Intercompany Subconsultant2</inlineHelpText>
        <label>Team Leader (Name)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Team Leader)</relationshipLabel>
        <relationshipName>AgreementsTeamLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamLeaderTitle__c</fullName>
        <label>Team Leader (Title)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermName__c</fullName>
        <label>Term Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalApprovedRevenueLimit__c</fullName>
        <label>Total Approved Revenue Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalContractValueConverted__c</fullName>
        <description>set via oracle if contract currency different.</description>
        <label>Total Contract Value Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalContractValue__c</fullName>
        <inlineHelpText>Enter the ceiling amount or upper limit of the contract, if available.</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalContractedBelow__c</fullName>
        <label>Total Contracted Below</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFundingAmount__c</fullName>
        <label>Total Funding Amount</label>
        <summarizedField>Funding__c.AllocatedAmount__c</summarizedField>
        <summaryForeignKey>Funding__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalIntercompanyBelow__c</fullName>
        <label>Total Intercompany Below</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalInvoicedConverted__c</fullName>
        <description>would need to come from oracle if contract currency is different</description>
        <label>Total Invoiced Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalInvoicesRecieved__c</fullName>
        <label>Total Invoices Recieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPaid__c</fullName>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRevenueConverted__c</fullName>
        <description>Would need to come from Oracle if contract currency different</description>
        <label>Total Revenue Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSubsBudget__c</fullName>
        <label>Total Subs Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaskOrdersValue__c</fullName>
        <inlineHelpText>The sum of all Ecosystem task orders linked to the master agreement (automatic calculation).</inlineHelpText>
        <label>Total Task Orders Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced__c</fullName>
        <label>Total Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USFederalGovernmentProject__c</fullName>
        <description>Check this box if this is a US Federal Contract</description>
        <formula>Project__r.USFederalGovernmentProject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check this box if this is a US Federal Contract</inlineHelpText>
        <label>US Federal Government Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnallocatedFunding__c</fullName>
        <formula>TotalApprovedRevenueLimit__c -  TotalFundingAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VarianceReason__c</fullName>
        <label>Variance Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Billed &amp; Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved to Work at risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional Tasks not authorized/funded by client.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VendorName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>VendorSub__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>AgreementsVendorName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VendorSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VendorSite__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VendorSite__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VendorSubContractReference_No__c</fullName>
        <inlineHelpText>Enter the Subs reference number (if applicable)</inlineHelpText>
        <label>Vendor/Sub Contract Reference No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segAdherence__c</fullName>
        <label>Adherence</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segAggregatePrice__c</fullName>
        <label>Aggregate Price</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segAmendmentOption__c</fullName>
        <label>Amendment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segDesignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designee</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Agreements (Designee)</relationshipLabel>
        <relationshipName>AgreementsDesignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>segGrossProfitRates__c</fullName>
        <label>Gross Profit Rates</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segGroupCFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group CFO</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Agreements (Group CFO)</relationshipLabel>
        <relationshipName>AgreementsGroupCFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>segNegotiatedWithoutRegard__c</fullName>
        <label>Negotiated Without Regard</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segOptionDoesNotQualify__c</fullName>
        <label>Option Does Not Qualify</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segPricingPolicy__c</fullName>
        <label>Pricing Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segProductOrServiceDiffers__c</fullName>
        <label>Product or Service Differs</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segProposalSubmitted__c</fullName>
        <label>Proposal Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segRightToAccept__c</fullName>
        <label>Right To Accept</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segSeparateComponents__c</fullName>
        <label>Separate Components</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segSeparatePhases__c</fullName>
        <label>Separate Phases</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segSeparateProposal__c</fullName>
        <label>Separate Proposal</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segSignificantHisory__c</fullName>
        <label>Significant History</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segTermsAndScope__c</fullName>
        <label>Terms and Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segUnderOriginalContract__c</fullName>
        <label>Under Original Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>segVerifiable__c</fullName>
        <label>Verifiable</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xxCustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxOracleCustomerID__c</fullName>
        <formula>Account__r.OracleCustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxOwnedbyempno__c</fullName>
        <label>xxOwned by Employee Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxPersonID__c</fullName>
        <label>xxPerson ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AgreementNumber__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>ExecutionDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TERMID__c</columns>
        <columns>OUID__c</columns>
        <columns>OUIDLegacy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>InterCompanyAgreement</fullName>
        <columns>NAME</columns>
        <columns>AgreementNumber__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>ExecutionDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TERMID__c</columns>
        <columns>OUID__c</columns>
        <columns>OUIDLegacy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.InterCompany</value>
        </filters>
        <label>Inter-Company Agreement</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MSA_View</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.PrimeMSA</value>
        </filters>
        <label>MSA View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MSAs</fullName>
        <columns>NAME</columns>
        <columns>AgreementNumber__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>ExecutionDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TERMID__c</columns>
        <columns>OUID__c</columns>
        <columns>OUIDLegacy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.PrimeMSA</value>
        </filters>
        <label>MSA&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PrimeAgreements</fullName>
        <columns>NAME</columns>
        <columns>AgreementNumber__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>ExecutionDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TERMID__c</columns>
        <columns>OUID__c</columns>
        <columns>OUIDLegacy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.Prime</value>
        </filters>
        <label>Prime Agreements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PrimeTaskOrder</fullName>
        <columns>NAME</columns>
        <columns>AgreementNumber__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>ExecutionDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TERMID__c</columns>
        <columns>OUID__c</columns>
        <columns>OUIDLegacy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.PrimeTaskOrder</value>
        </filters>
        <label>Prime Task Order</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AN-{0000000}</displayFormat>
        <label>Ecosystem Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>InterCompany</fullName>
        <active>true</active>
        <description>An internal agreement for obtaining services from another AECOM affiliated company for use under a prime contract with a client.</description>
        <label>Inter-Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>JointVenture</fullName>
        <active>true</active>
        <description>An agreement between AECOM and other firms to jointly pursue a particular project or business venture. This is a contractual relationship where the parties share work, risk, profits and losses.</description>
        <label>Joint Venture</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Any other contract\agreement type that does not meet the contract types described herein (e.g., Confidentiality Agreement, Non-Disclosure Agreement, Memorandum of Understanding, Teaming etc).</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prime</fullName>
        <active>true</active>
        <description>Any type of single use contract for general consulting services between AECOM and the client.  This type of agreement will be interfaced to Oracle to provide the contract value and approved funding for the project.</description>
        <label>Prime</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrimeMSA</fullName>
        <active>true</active>
        <description>Any type of multi-use, task order contract for general consulting services between AECOM and the client where the client orders individual services within a single project or for multiple projects.</description>
        <label>Prime (MSA)</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrimeTaskOrder</fullName>
        <active>true</active>
        <description>An order issued under a master services-type agreement with the client to perform specified individual services or tasks.  This type of agreement will be interfaced to Oracle to provide the contract value and approved funding for the project.</description>
        <label>Prime Task Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub</fullName>
        <active>true</active>
        <description>An agreement with a subcontractor or sub-consultancy to perform some or all of AECOMs contractual-obligations under the prime contract with the client.</description>
        <label>Sub</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EcoAgreementCurrencyCannotChangeOnceSynd</fullName>
        <active>true</active>
        <description>Agreement currency cannot be changes once an agreement is synced to Oracle.</description>
        <errorConditionFormula>AND(ISCHANGED(FundingCurrencyCode__c),
ISPICKVAL(OracleSyncStatus__c,&apos;S&apos;))</errorConditionFormula>
        <errorDisplayField>FundingCurrencyCode__c</errorDisplayField>
        <errorMessage>Agreement currency cannot be changes once an agreement is synced to Oracle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ordering_Start_needs_to_be_before_End</fullName>
        <active>true</active>
        <errorConditionFormula>OrderingPeriodStart__c  &gt;  OrderingPeriodEnd__c</errorConditionFormula>
        <errorMessage>The Ordering Period Start needs to be before the Ordering Period End</errorMessage>
    </validationRules>
</CustomObject>